Aktualisiert auf die aktuellen Vorgaben

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -6,12 +6,15 @@
 
 \newcommand{\dokumententyp}{Bachelorthesis}
 \newcommand{\abgabedatum}{\today} 
-\newcommand{\ort}{Paderborn} 
+\newcommand{\ort}{Mettmann} 
 \newcommand{\koorperationsunternehmen}{Unternehmen GmbH}
 \newcommand{\dokumententitel}{Konzeption und prototypische Realisierung einer \dokumententyp{} mit {\LaTeX}}
 \newcommand{\dokumentenautor}{Max Mustermann}
 \newcommand{\dokumentenautoradress}{Musterweg 123\\33102 Paderborn}
 \newcommand{\dokumentenpruefer}{Prof. Dr. Weis-Alles\\Prof. Dr. Besser}
+\newcommand{\studiengang}{Studiengang}
+\newcommand{\spezialisierungsbereich}{Spezialisierung}
+\newcommand{\matnummer}{000000}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
