--- a/config/Config.tex
+++ b/config/Config.tex
@@ -32,6 +32,14 @@ final             % draft beschleunigt die Kompilierung
 ]
 {scrartcl}
 
+
+\usepackage{geometry}
+\geometry{
+   left=4cm,
+   right=2cm,
+   top=2.5cm,
+   bottom=2.5cm}
+
 %\setuptoc{toc}{totoc} % Inhaltsverzeichnis ins Inhaltsverzeichnis
 
 % Neue Deutsche Rechtschreibung und Deutsche Standardtexte
