User Story Update

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -4,17 +4,17 @@
 %% Parameter - Hier auf die eigene Arbeit anpassen
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\newcommand{\dokumententyp}{Bachelorthesis}
+\newcommand{\dokumententyp}{Studienarbeit}
 \newcommand{\abgabedatum}{\today} 
 \newcommand{\ort}{Mettmann} 
 \newcommand{\koorperationsunternehmen}{Unternehmen GmbH}
-\newcommand{\dokumententitel}{Konzeption und prototypische Realisierung einer \dokumententyp{} mit {\LaTeX}}
-\newcommand{\dokumentenautor}{Max Mustermann}
-\newcommand{\dokumentenautoradress}{Musterweg 123\\33102 Paderborn}
-\newcommand{\dokumentenpruefer}{Prof. Dr. Weis-Alles\\Prof. Dr. Besser}
-\newcommand{\studiengang}{Studiengang}
-\newcommand{\spezialisierungsbereich}{Spezialisierung}
-\newcommand{\matnummer}{000000}
+\newcommand{\dokumententitel}{A}
+\newcommand{\dokumentenautor}{A}
+\newcommand{\dokumentenautoradress}{A}
+\newcommand{\dokumentenpruefer}{A}
+\newcommand{\studiengang}{Angewandte Informatik}
+\newcommand{\spezialisierungsbereich}{A}
+\newcommand{\matnummer}{A}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -41,7 +41,7 @@
 %%
 %% Für die finale Version auskommentieren!
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\fancyhead[L]{\color{red} Stand: \today~-~\currenttime}
+%\fancyhead[L]{\color{red} Stand: \today~-~\currenttime}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Verzeichnisse
@@ -92,7 +92,7 @@
 
 \include{chapter/Einleitung}
 
-\include{chapter/Installation}
+\include{chapter/UserStoryUseCase}
 
 \include{chapter/Grundlagen}
 
