--- a/Thesis.tex
+++ b/Thesis.tex
@@ -9,12 +9,12 @@
 \newcommand{\ort}{Mettmann} 
 \newcommand{\koorperationsunternehmen}{Unternehmen GmbH}
 \newcommand{\dokumententitel}{A}
-\newcommand{\dokumentenautor}{A}
+\newcommand{\dokumentenautor}{Niklas Hardes, Nicolas Groß, Robert Hesselmann}
 \newcommand{\dokumentenautoradress}{A}
 \newcommand{\dokumentenpruefer}{A}
 \newcommand{\studiengang}{Angewandte Informatik}
 \newcommand{\spezialisierungsbereich}{A}
-\newcommand{\matnummer}{A}
+\newcommand{\matnummer}{000000,000000,101672}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -77,6 +77,7 @@
 \listoftables\newpage
 
 % Quelltextverzeichnis
+\renewcommand{\lstlistlistingname}{Quelltextverzeichnis}
 \fancyhead[R]{\lstlistlistingname}
 \lstlistoflistings\newpage
 
