--- a/config/Config.tex
+++ b/config/Config.tex
@@ -123,6 +123,7 @@ final             % draft beschleunigt die Kompilierung
 
 % Sourcecode-Listings
 \usepackage{listings}
+\usepackage{xcolor}
 
 % Bestimmte Warnungen unterdrücken
 % siehe http://tex.stackexchange.com/questions/51867/koma-warning-about-toc
@@ -139,7 +140,7 @@ final             % draft beschleunigt die Kompilierung
 
 \renewcommand*\cftfigpresnum{Abbildung~}
 \renewcommand*\cfttabpresnum{Tabelle~}
-\renewcommand*\cftlistingspresnum{Listing~}
+\renewcommand*\cftlistingspresnum{Quelltext~}
 \renewcommand{\cftfigaftersnum}{:}
 \renewcommand{\cfttabaftersnum}{:}
 \renewcommand{\cftlistingsaftersnum}{:}
@@ -150,7 +151,8 @@ final             % draft beschleunigt die Kompilierung
 \setlength{\cftfigindent}{1.5em}
 \setlength{\cftlistingsindent}{1.5em}
 
-\renewcommand\lstlistlistingname{Listingverzeichnis}
+\renewcommand\lstlistlistingname{Quelltextverzeichnis} %Listingverzeichnis}
+\renewcommand\lstlistingname{Quelltext} %Listingverzeichnis}
  
 % Style für Kopf- und Fußzeilenfelder
 \pagestyle{fancy}
@@ -190,6 +192,41 @@ final             % draft beschleunigt die Kompilierung
   captionpos=t,
   lineskip=-0.3em
 }
+
+\colorlet{punct}{red!60!black}
+\definecolor{background}{HTML}{EEEEEE}
+\definecolor{delim}{RGB}{20,105,176}
+\colorlet{numb}{magenta!60!black}
+
+\lstdefinelanguage{json}{
+    basicstyle=\normalfont\ttfamily,
+    numbers=left,
+    numberstyle=\scriptsize,
+    stepnumber=1,
+    numbersep=8pt,
+    showstringspaces=false,
+    breaklines=true,
+    frame=lines,
+    % backgroundcolor=\color{background},
+    literate=
+     *{0}{{{\color{numb}0}}}{1}
+      {1}{{{\color{numb}1}}}{1}
+      {2}{{{\color{numb}2}}}{1}
+      {3}{{{\color{numb}3}}}{1}
+      {4}{{{\color{numb}4}}}{1}
+      {5}{{{\color{numb}5}}}{1}
+      {6}{{{\color{numb}6}}}{1}
+      {7}{{{\color{numb}7}}}{1}
+      {8}{{{\color{numb}8}}}{1}
+      {9}{{{\color{numb}9}}}{1}
+      {:}{{{\color{punct}{:}}}}{1}
+      {,}{{{\color{punct}{,}}}}{1}
+      {\{}{{{\color{delim}{\{}}}}{1}
+      {\}}{{{\color{delim}{\}}}}}{1}
+      {[}{{{\color{delim}{[}}}}{1}
+      {]}{{{\color{delim}{]}}}}{1},
+}
+
 
 %\makeatletter
 %\def\l@lstlisting#1#2{\@dottedtocline{1}{0em}{1.5em}{\lstlistingname\space{#1}}{#2}}
