--- a/Thesis.tex
+++ b/Thesis.tex
@@ -13,8 +13,8 @@
 \newcommand{\dokumentenautorA}{Niklas Hardes}
 \newcommand{\dokumentenautorB}{Nicolas Groß}
 \newcommand{\dokumentenautorC}{Robert Hesselmann}
-\newcommand{\dokumentenautoradressA}{A}
-\newcommand{\dokumentenautoradressAB}{A}
+\newcommand{\dokumentenautoradressA}{Am Wildgatter 24}
+\newcommand{\dokumentenautoradressAB}{45891 Gelsenkirchen}
 \newcommand{\dokumentenautoradressB}{Winkelstraße 66}
 \newcommand{\dokumentenautoradressBB}{45966 Gladbeck}
 \newcommand{\dokumentenautoradressC}{Kronprinzenstraße 83}
@@ -22,7 +22,7 @@
 \newcommand{\dokumentenpruefer}{Dr. Thomas Ströder}
 \newcommand{\studiengang}{Angewandte Informatik}
 \newcommand{\spezialisierungsbereich}{A}
-\newcommand{\matnummerA}{000000}
+\newcommand{\matnummerA}{101671}
 \newcommand{\matnummerB}{101669}
 \newcommand{\matnummerC}{101672}
 
@@ -101,13 +101,15 @@
 % Arabische Seitennummerierung
 \pagenumbering{arabic} 
 
-\include{chapter/Einleitung}
+%\include{chapter/Einleitung}
 
 \include{chapter/UserStoryUseCase}
 
 \include{chapter/Technologieauswahlentscheidungen}
 
 \include{chapter/Entwicklungsprinzipien}
+
+\include{chapter/EntwicklungsprinzipienVerstoß}
 
 \include{chapter/SichtenGesamtsystem}
 
@@ -120,7 +122,7 @@
 
 % \include{chapter/Grundlagen}
 
-\include{chapter/Zusammenfassung}
+%\include{chapter/Zusammenfassung}
 	
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
