--- a/Thesis.tex
+++ b/Thesis.tex
@@ -9,21 +9,21 @@
 \newcommand{\ort}{Mettmann} 
 \newcommand{\koorperationsunternehmen}{Unternehmen GmbH}
 \newcommand{\dokumententitel}{Entwicklung eines Softwareprojektes}
-\newcommand{\dokumentensubtitel}{Spiele Lizenzschlüssel Preisvergleich}
-\newcommand{\dokumentenautorA}{Niklas Hardes}
-\newcommand{\dokumentenautorB}{Nicolas Groß}
+\newcommand{\dokumentensubtitel}{Spielelizenz-Suchmaschine mit Preisvergleich}
+\newcommand{\dokumentenautorA}{Nicolas Groß}
+\newcommand{\dokumentenautorB}{Niklas Hardes}
 \newcommand{\dokumentenautorC}{Robert Hesselmann}
-\newcommand{\dokumentenautoradressA}{Am Wildgatter 24}
-\newcommand{\dokumentenautoradressAB}{45891 Gelsenkirchen}
-\newcommand{\dokumentenautoradressB}{Winkelstraße 66}
-\newcommand{\dokumentenautoradressBB}{45966 Gladbeck}
+\newcommand{\dokumentenautoradressA}{Winkelstraße 66}
+\newcommand{\dokumentenautoradressAB}{45966 Gladbeck}
+\newcommand{\dokumentenautoradressB}{Am Wildgatter 24}
+\newcommand{\dokumentenautoradressBB}{45891 Gelsenkirchen}
 \newcommand{\dokumentenautoradressC}{Kronprinzenstraße 83}
 \newcommand{\dokumentenautoradressCB}{40217 Düsseldorf}
 \newcommand{\dokumentenpruefer}{Dr. Thomas Ströder}
 \newcommand{\studiengang}{Angewandte Informatik}
 \newcommand{\spezialisierungsbereich}{A}
-\newcommand{\matnummerA}{101671}
-\newcommand{\matnummerB}{101669}
+\newcommand{\matnummerA}{101669}
+\newcommand{\matnummerB}{101671}
 \newcommand{\matnummerC}{101672}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -51,7 +51,7 @@
 %%
 %% Für die finale Version auskommentieren!
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\fancyhead[L]{\color{red} Stand: \today~-~\currenttime}
+\fancyhead[L]{\color{red} Stand: \today~-~\currenttime}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Verzeichnisse
@@ -65,8 +65,8 @@
 \tableofcontents\newpage
 
 % Glossar
-\renewcommand{\glossarypreamble}{\label{glossary}}
-\printglossary[style=long, title=Glossar, toctitle=Glossar] \newpage
+% \renewcommand{\glossarypreamble}{\label{glossary}}
+% \printglossary[style=long, title=Glossar, toctitle=Glossar] \newpage
 
 % Abkürzungsverzeichnis
 \renewcommand{\glossarypreamble}{\label{acronyms}}
