--- a/config/Abkuerzungen.tex
+++ b/config/Abkuerzungen.tex
@@ -5,6 +5,7 @@
 \newacronym{API}{API}{Application Programming Interface}
 \newacronym{ATM}{ATM}{Automated Teller Machine}
 \newacronym{CICD}{CI/CD}{Continious-Integration/Continious-Deployment}
+\newacronym{http}{HTTP}{Hypertext Transfer Protocol}
 %Glossary
 \newglossaryentry{Glossar}
 {
